--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.htc.upm.vivehandtracking": "1.0.0",
+    "com.mines-paristech.colibri-vr": "https://github.com/CAOR-MINES-ParisTech/colibri-vr-unity-package.git",
     "com.unity.2d.animation": "5.0.9",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.2",
