--- a/.bazelrc
+++ b/.bazelrc
@@ -4,6 +4,7 @@ common --experimental_repo_remote_exec
 # Basic build settings
 build --jobs 128
 build --define='absl=1'
+build --features=compiler_param_file
 build --enable_platform_specific_config
 
 # Linux
@@ -32,21 +33,29 @@ build --apple_platform_type=macos
 # the automatic configuration transition uses //external:android/crosstool.
 # Using it here works and spares us from having two different config_settings
 # for Android.
+build:android --noenable_platform_specific_config
 build:android --crosstool_top=//external:android/crosstool
 build:android --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:android --cxxopt=-std=c++17
+build:android --copt=-w
 build:android --linkopt=-landroid
 build:android --linkopt=-ldl
 build:android --linkopt=-llog
 build:android --linkopt=-lm
 build:android --linkopt=-Wl,--gc-sections
 
-build:android_arm --config=android
-build:android_arm --cpu=armeabi-v7a
-build:android_arm --fat_apk_cpu=armeabi-v7a
+build:android_armv7 --config=android
+build:android_armv7 --cpu=armeabi-v7a
+build:android_armv7 --fat_apk_cpu=armeabi-v7a
 
 build:android_arm64 --config=android
 build:android_arm64 --cpu=arm64-v8a
 build:android_arm64 --fat_apk_cpu=arm64-v8a
+
+build:android_fat --config=android
+# specify dummy cpu to avoid an error: "Illegal ambiguous match on configurable attribute "linkopts" in @XNNPACK//:xnnpack_for_tflite:"
+build:android_fat --cpu=arm64-v8a
+build:android_fat --fat_apk_cpu=armeabi-v7a,arm64-v8a
 
 build:ios --apple_platform_type=ios
 
@@ -73,3 +82,9 @@ build:ios_arm64e --watchos_cpus=armv7k
 build:ios_fat --config=ios
 build:ios_fat --ios_multi_cpus=armv7,arm64
 build:ios_fat --watchos_cpus=armv7k
+
+build:wasm --crosstool_top=@emsdk//emscripten_toolchain:everything
+build:wasm --cpu=wasm
+build:wasm --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:wasm --copt=-emit-llvm
+build:wasm --cxxopt=-emit-llvm
